public/styles/nav.css
nav {
  background-color: var(--black);

  height: var(--nav-height);

  display: flex;
  align-items: center;

  position: relative;
}

nav img {
  width: 2rem;
  height: auto;

  max-width: 50px;
}

nav a {
  color: var(--white);

  font-size: clamp(1.25rem, 4vw, 1.7rem);
}

#site-title {
  background-color: var(--primary-green);
  width: 45%;
  height: 100%;

  font-weight: bold;

  clip-path: polygon(0 0, 90% 0, 100% 100%, 0 100%);

  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 0.8rem;
}

#site-title a {
  font-size: clamp(1.5rem, 5vw, 1.75rem);
  color: var(--black);
}

#login {
  margin: 0 1rem 0 auto;
}

#nav-username {
  font-size: clamp(1.3rem, 3vw, 1.6rem);
  color: var(--white);
}

#nav-options {
  margin: 0 1rem 0 auto;

  display: flex;
  align-items: center;
}

#nav-links {
  position: absolute;
  top: var(--nav-height);
  left: 0;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  text-align: center;
  gap: 1.5rem;

  width: 100vw;
  height: calc(100vh - var(--nav-height));
  padding: 1rem;

  background-color: var(--dark-gray);

  opacity: 0;
  visibility: hidden;
  pointer-events: none;

  transform: translateX(-100%);
  transition:
    transform 0.3s ease,
    opacity 0.3s ease,
    visibility 0.3s ease-in-out;
}

/* Display nav links overlay mobile */
#nav-links.open {
  opacity: 1;
  visibility: visible;
  pointer-events: auto;

  transform: translateX(0);
}

.nav-link {
  color: var(--white);
  font-size: clamp(1.1rem, 3vw, 1.3rem);

  border: 0.2rem solid transparent;
  border-radius: 1rem;

  padding: 0.25rem 0.5rem;

  transition:
    border-color 0.2s,
    background-color 0.2s,
    color 0.2s,
    transform 0.3s;
}

.nav-link:hover,
.nav-link:focus-visible {
  outline: none;
  border-color: var(--white);

  background-color: var(--white);
  color: var(--secondary-green);
}

.nav-link:active {
  transform: scale(0.9);
}

@media (min-width: 800px) {
  #site-title {
    width: 20%;
    justify-content: start;
    padding: 0 1rem;
  }

  #nav-options {
    display: grid;
    gap: 2rem;
    grid-template-columns: 1fr auto;
    width: 100%;
  }

  #nav-links {
    position: static;

    grid-area: 1 / 1 / 2 / 2;
    justify-content: flex-end;
    align-items: center;
    flex-direction: row;
    gap: 1rem;

    width: 100%;
    height: 100%;
    padding: 0;

    background-color: transparent;
    transition: none;

    opacity: 1;
    visibility: visible;
    pointer-events: auto;
    transform: none;

    transition: none;
  }

  #menu-on-btn {
    display: none;
  }
}

